--- a/stylua.toml
+++ b/stylua.toml
@@ -1,6 +1,6 @@
-indent_width = 2
+indent_width = 4
 column_width = 120
-indent_type = "Tabs"
+indent_type = "Spaces"
 
 quote_style = "ForceDouble"
 call_parentheses = "Always"
